test/errors/packages/library-style-missing/build.ts
import { runAngularPackageBuilder } from '../../../..';

runAngularPackageBuilder( [
	'test/external-resources/packages/library-style-missing/.angular-package.json'
] ).catch( ( error: Error ) => {
	// Do nothing
} );
